[package]
name = "rust-ice-112793"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "0.2.9"
http-body = "0.4.5"
hyper = { version = "0.14", features = ["stream", "server", "tcp", "http1", "http2"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "tls-rustls"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "parking_lot"] }
